--- a/package.json
+++ b/package.json
@@ -22,7 +22,10 @@
     "pg": "^8.11.0",
     "sequelize": "^6.32.1",
     "sqlite3": "^5.1.6",
-    "uuid": "^9.0.0"
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^4.6.3",
+    "uuid": "^9.0.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
