--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon app.js",
+    "start:dev": "nodemon app.js",
+    "start": "node app.js",
     "build": "npm i"
   },
   "keywords": [],
