--- a/.env
+++ b/.env
@@ -1,7 +1,8 @@
 PORT=5000
+CLIENT_URL=http://2.59.41.2:3000
 JWT_ACCESS_SECRET = 23asdfgajglkajkl345j5
 JWT_REFRESH_SECRET = 42lasdfgklagj345sdaljkdfs
-API_URL = http://localhost:5000
+API_URL = https://2.59.41.2:5000
 DB_USERNAME=user
 DB_PASSWORD=pass
 DB_HOST=./database.sqlite
